# NeuralNetwork_MLP

./: .gitignore  README.md
GUIProjrct/cmake/: CMakeLists.txt
GUIProjrct/gui/: mainwindow.ui
GUIProjrct/include/: Layer.h  NeuralNetwork.h  errorchart.h  mainwindow.h  sinworker.h  xorworker.h
GUIProjrct/src/: Layer.cpp  NNSettingsDialog.cpp  NeuralNetwork.cpp  errorchart.cpp  main.cpp  mainwindow.cpp  sinworker.cpp  xorworker.cpp
MatrixVectorLib/cmake/: CMakeLists.txt
MatrixVectorLib/include/: Layer.h  Weight.h
MatrixVectorLib/lib/Debug/: MatrixLib.lib  MatrixVectorLib.lib
MatrixVectorLib/lib/RelWithDebInfo/: MatrixVectorLib.lib
MatrixVectorLib/lib/Release/: MatrixVectorLib.lib
MatrixVectorLib/src/: Layer.cpp  Weight.cpp  main.cpp
NeuralNet/cmake/: CMakeLists.txt
NeuralNet/include/: Layer.h  NeuralNetwork.h  Weight.h
NeuralNet/lib/Debug/: NeuralNetwork.lib
NeuralNet/lib/RelWithDebInfo/: NeuralNetwork.lib
NeuralNet/src/: Layer.cpp  NeuralNetwork.cpp  Weight.cpp  main.cpp
